--- a/lang.yml
+++ b/lang.yml
@@ -84,13 +84,12 @@ no-previous-page: "&cThere are no previous pages to view. You are on the first p
 refresh-fail: "&cThere was nothing to refresh."
 group-selection-start: "&ePlease select all of the players you wish to request to teleport with you."
 player-selection-fail: "&cThere must be at least one player selected to complete the process."
-player-selected-teleport: "&eThe player &a{player} &ewould like you to teleport with them. <&e(Click To Accept):/warps accept {player}:&aClick to accept the player's request.>"
+player-selected-teleport: "&eThe player &a{player} &ewould like &eyou to teleport &ewith them. <&e(Click To Accept):/warps accept {player}:&aClick to accept the player's request.>"
 no-players-found: "&cThere seems to be no players currently online other than yourself."
 group-teleport-fail: "&cThe group teleportation failed due to none of the selected players accepting the request."
 group-teleport-success: "&eYou have been teleported with all of the selected players who accepted the request."
 group-teleport-sent: "&eTeleportation requests have been sent out to all selected players."
 group-teleported: "&eYou have been teleported with &a{player}&e."
-no-request: "&cYou don't have any requests from &e{player}&c."
 request-deny-fail: "&cUnable to deny &e{player} &csince the request was either not accepted or invalid."
 request-accept-fail: "&cUnable to accept &e{player} &csince the request was either already accepted or invalid."
 request-denied: "&eYou have denied &a{player}'s &erequest."
@@ -116,7 +115,7 @@ player-tpa-denied: "&e{player} &chas denied your TPA request."
 teleport-toggled-off: "&eTeleportation has been toggled &cOff&e."
 teleport-toggled-on: "&eTeleportation has been toggled &aOn&e."
 no-last-location: "&cYou currently have no last teleport location."
-teleport-last-location: "&eYou have teleported to your last location."
+teleport-last-location: "&eYou will now be teleported to your last location."
 teleported-last-location: "&eThe player &a{player} &ehas been teleported to their last location."
 teleport-self: "&cYou are unable to teleport to yourself. Please use another player's name."
 teleport-here-self: "&cYou are unable to teleport to yourself to yourself. Please use another player's name."
@@ -148,8 +147,13 @@ blocked-world: "&cThis world is currently blocking warp actions."
 invalid-status: "&cThat status you entered was invalid. The available statuses are: &e{statuses}"
 status-set: "&aThe status of the warp &e{warp} &ahas been set to &e{status}&a!"
 spawn-invalid: "&cThe spawn location is currently invalid. It must be set before it can be used."
-teleport-spawn: "&aYou have been sent to the set spawn!"
+teleport-spawn: "&aYou will now be teleported to Spawn!"
 spawn-set: "&aThe spawn has been set to your current location!"
 spawn-set-first-join: "&aThe first join spawn has been set to your current location! (Make sure the option is enabled in the configuration)"
 teleport-first-join-spawn: "&aWelcome to the server &e{player} &ayou have been sent to the first join spawn!"
 spawns-cleared: "&aABoth the first join and normal spawn have been cleared!"
+group-destination-invalid: "&cThe destination for the group teleportation was unable to be identified. Please try again."
+basic-teleportation-engaged: "&aYou have been teleported to &eWorld: &6{world} &eX: &6{x} &eY: &6{y} &eZ: &6{z}&a!"
+tpa-cooldown: "&cYou are unable to send a teleportation request to a player for another &e{duration} &csecond(s)."
+assistants-list: "&eCurrent Assistant(s) For The Warp &a{warp}&e: &a{list}"
+listed-list: "&eCurrent Listed For The Warp &a{warp}&e: &a{list}"
