The plugin now uses Spigot as its base. CraftBukkit/Bukkit is no longer supported. In addition, 1.16 should work out of the box as long as the classpath doesn't change outside of normal NMS.
When the “/spawn” command is used, the sender will no longer receive two messages.

When calculating a player's personal warp limit, invalid value entered as the suffix will now be skipped.

Implemented a simple check to see if the player is in bed when interacting with the GUI. There is apparently a GUI duplication glitch found in vanilla mc causing this, so this was added just in case!

Warp usage costs now go to the warp owner, if exists.

Random teleportation now attempts to retrieve a chunk when finding locations, if the chunk takes too long to obtain by the time the check comes across, the attempt will now be considered a failure. It is HIGHLY recommended that Paper Spigot is used for the best random teleportation experience. If not, please pre-generate your world as the plugin will NOT play nicely and generate it for you ;).

Random teleportation now randomizes using the smart limit (starting at zero) subtracted from the configured bounds size. The smart limit will increase by 0.5% of the bounds size for every failed attempt at finding a safe location. The system now also uses the full scope of the bounds size,  meaning there is a possibility for the player to mean the world's limit (higher the size, lower the chance).

Random teleportation will no longer teleport a player to a location that has a distance less than 10% the current smart bounds radius from base-location. This just forces the system to push players out a little more based on smart bounds. As an example, 10% of a 10,000 bounds radius will result in 1,000 blocks from the base-location minimum.

Warp sorting now compares traffic (if featured mode is enabled), the ratio of likes to dislikes, and now sorts alphabetically before analyzing furthur. This will make GUI interactions feel more consistent rather than 

--- a/config.yml
+++ b/config.yml
@@ -12,8 +12,8 @@ mysql-connection:
   username: "root"
   password: ""
   # These are the connection properties, you can add/remove from this list as long as it follows an identical format.
-  properties:
-    useSSL: "false"
+  # (NOTE: This is for advanced users this feature just extends upon the SQL syntax connection line.)
+  sql-properties: ""
 
 # Here is where everything that is general can be configured
 general-section:
@@ -184,7 +184,7 @@ warp-icon-section:
   # (NOTE: This can be set to -1 to disable this check)
   long-word-wrap: 16
   # This is the default description that is set to a newly created warp.
-  default-description: "&7This is the default HyperDrive warp description. &7(Note: This can be changed inside the edit menu)"
+  default-description: "This is the default HyperDrive warp description. &7(Note: This can be changed inside the edit menu)"
   # This is the lore the warp icon is given inside of menus.
   # Current Placeholders:
   # {description} - replaces the line with the first description line while adding the remaining lines below it.
