The random teleportation feature now uses Java’s Future API for chunk loading.
Simplified the default warp icon lore to make it less scary. https://imgur.com/i1gr6Rj.png

By default, standalone teleportation commands now use the firework effect instead of the smoke effect for better visibility and prettiness.

Tab completion will now only show warp names for single argument commands; otherwise, it will use player names.

Implemented the “/warps visits <add/remove/set> <warp> <amount>” command for warp visit count administrator management. This included the addition of some new messages that will appear in the “lang.yml” and the “hyperdrive.admin.visits” permission. This command is very base-line so you will be able to set it to negative value and stuff, but regardless of the value it is mainly a sorting mechanic!

Resolved an animation issue where locations would return invalid causing some animation to get stuck. In addition to this, animations now do time checks before anything else to make sure loops can’t get stuck.

Resolved an issue where warp icons that have zero like or dislikes would provoke an undefined ratio causing the sorting mechanic to fail.

Fixed an issue where the default configuration would merge the slots of the animation set and player list edit buttons. This will need to be adjusted manually for existing configurations, but it is fixed for defaults.

Signed-off-by: BuildTools <unconfigured@null.spigotmc.org>

--- a/config.yml
+++ b/config.yml
@@ -184,7 +184,7 @@ warp-icon-section:
   # (NOTE: This can be set to -1 to disable this check)
   long-word-wrap: 16
   # This is the default description that is set to a newly created warp.
-  default-description: "This is the default HyperDrive warp description. &7(Note: This can be changed inside the edit menu)"
+  default-description: "This is the default HyperDrive warp description. (Note: This can be changed inside the edit menu)"
   # This is the lore the warp icon is given inside of menus.
   # Current Placeholders:
   # {description} - replaces the line with the first description line while adding the remaining lines below it.
@@ -215,17 +215,7 @@ warp-icon-section:
   # {is-public} - Only displays if the warp's status is set to PUBLIC.
   # {is-admin} - Only displays if the warp's status is set to ADMIN.
   list-lore-format:
-    - "&e&l&m----------------------------"
-    - ""
     - "{description}"
-    - ""
-    - "&e&l&m----------------------------"
-    - ""
-    - "&7Status: &e{status}"
-    - "&7Icon Theme: &e{theme}"
-    - "&7Animation Set: &e{animation-set}"
-    - "&7Creation Date: &e{creation-date}"
-    - "&7Usage Cost: &e${usage-price}"
     - ""
     - "{no-access}&cYou don't have access to use this warp."
     - "{has-access}&a(Left-Click) &eBegin the teleportation process."
@@ -233,14 +223,14 @@ warp-icon-section:
     - "{has-access}&a(Shift + Left-Click) &eBegin the warp rating process."
     - "{can-edit}&a(Shift + Right-Click) &eBegin the warp edit process."
     - ""
-    - "&a\u2714 &e{likes}   &r{like-bar}   &e{dislikes} &c\u2716"
+    - "&7It will cost &e${usage-price} &7to use this warp."
+    - "&a\u2714 &e{likes} &r{like-bar} &e{dislikes} &c\u2716"
     - ""
     - "&7Owner: &e{owner}"
-    - "&7Player List Count: &e{list-count}"
-    - "&7Assistant Count: &e{assistant-count}"
-    - "&7Warp Traffic/Popularity: &e{traffic}"
+    - "&7Visits: &e{traffic}"
     - ""
-    - "&e&l&m----------------------------"
+    - "&7Created: &e{creation-date}"
+    - "&7This is a &e{status} &7warp."
 
 # Here is where everything related to animation can be customized.
 special-effects-section:
@@ -263,7 +253,7 @@ special-effects-section:
   # This is the animation that is displayed when the player is successfully randomly teleported. (Format: <type>:<effect>)
   # Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
   # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
-  random-teleport-animation: "CIRCLE:SMOKE_NORMAL"
+  random-teleport-animation: "CIRCLE:FIREWORKS_SPARK"
   # This is the animation that is displayed when the player is successfully teleported through a standalone teleportation command such as /TP or /TPO.
   # (Format: <type>:<effect>) Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
   # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
