# API Changes * Fixed an issue causing the events to throw an exception.
# Plugin Changes
* Implemented the /rtpa or /rtpadmin command which is the exact same, but bypasses all limitations such as delays and cooldowns.
* GUI warp sorting now prioritizes alphabetical order. If the compared values are equal, then it will sort based on like to dislike ratio. The featured warp list is the exact same way, but instead of like/dislike ratio it is based on visits.
* The warp tab completion now will show results based on the original entry. For example, if the value "enchant" is entered only warp names containing the word will be shown in the completion.
* Re-worked the SQL syntax to better support MongoDB forks of MySQL and modern versions of SQLite using JDBC 4.
* The "/back" command now updates locations from all forms of teleportation and off of its own teleportation. In addition, player last location data will never be dropped until the server restarts, reloads, or the plugin is disabled in any form. This data is TEMPORARY information stored virtually and NOT saved.
* Split the TPA and TPAHere messages into separate messages. The can be found newly added to your "lang.yml".
* Added default permissions to the add/remove command buttons for warp editing. This removes tha ability from normal users.
* Fixed an issue with blacklist detection.
* Fixed an issue with column update orders for SQL.

Signed-off-by: BuildTools <unconfigured@null.spigotmc.org>

--- a/menus.yml
+++ b/menus.yml
@@ -485,7 +485,7 @@ edit-menu-section:
       click-sound: true
       sound-name: "UI_BUTTON_CLICK"
       usage-cost: 80
-      permission: ""
+      permission: "hyperdrive.addcmd"
       display-name: "&aAdd Command"
       lore:
         - ""
@@ -558,7 +558,7 @@ edit-menu-section:
       click-sound: true
       sound-name: "UI_BUTTON_CLICK"
       usage-cost: 80
-      permission: ""
+      permission: "hyperdrive.removecmd"
       display-name: "&cRemove Command"
       lore:
         - ""
