# API Changes * The display name and description color methods have been swapped to Strings to allow HEX color codes and general purpose data control. * Removed some depricated methods from the manager class causing conflicts. * The "sendCustomMessage" method has been given an extra argument and only requires the path within the lang.yml. * Removed no longer needed JSON classes. * Fixed an issue causing the events to throw an exception.
# Plugin Changes
* Re-worked most messages to support the new sendMessage methods.
* Warp names and descriptions now only replace quotation symbols. Both single and double to prevent syntax issues during the saving/loading phase.
* Cross-Server capabilities have been partially re-worked moving everything teleportation-based to the BungeeCord channel for quick response times and connectivity issue resistance.
* Implemented the /rtpa or /rtpadmin command which is the exact same, but bypasses all limitations such as delays and cooldowns.
* GUI warp sorting now prioritizes alphabetical order. If the compared values are equal, then it will sort based on like to dislike ratio. The featured warp list is the exact same way, but instead of like/dislike ratio it is based on visits.
* The warp tab completion now will show results based on the original entry. For example, if the value "enchant" is entered only warp names containing the word will be shown in the completion.
* Most of the standalone teleportation commands have been given their own player name tab completion.
* Re-worked the SQL syntax to better support MongoDB forks of MySQL and modern versions of SQLite using JDBC 4.
* The "/back" command now updates locations from all forms of teleportation and off of its own teleportation. In addition, player last location data will never be dropped until the server restarts, reloads, or the plugin is disabled in any form. This data is TEMPORARY information stored virtually and NOT saved.
* Split the TPA and TPAHere messages into separate messa

--- a/lang.yml
+++ b/lang.yml
@@ -43,6 +43,9 @@ chat-interaction-cancelled: "&cYour chat interaction has been cancelled."
 create-warp-interaction: "&ePlease enter the name you wish to give your warp (Type {cancel} to stop the interaction):"
 rename-warp-interaction: "&ePlease enter the name you wish to re-name your warp to (Type {cancel} to stop the interaction):"
 give-ownership-interaction: "&ePlease enter the name of the player you wish to give ownership of the warp to (Type &a{cancel} &eto stop the interaction):"
+ownership-given: "&aOwnership of the warp &e{warp} &ahas been given to &e{player}&a."
+ownership-obtained: "&aOwnership of the warp &e{warp} &ahas been given to you."
+ownership-self: "&cYou are unable to give yourself ownership of something you already own."
 edit-description-interaction: "&ePlease enter the text that should be set as the warp's description (Type &a{cancel} &eto stop the interaction and {clear} to clear the description):"
 description-set: "&eThe description of the warp &a{warp} &ehas been set to &a{description}&e."
 description-cleared: "&eThe description of the warp &a{warp} &ehas been cleared."
