--- a/lang.yml
+++ b/lang.yml
@@ -172,3 +172,4 @@ assistants-list: "&eCurrent Assistant(s) For The Warp &a{warp}&e: &a{list}"
 listed-list: "&eCurrent Listed For The Warp &a{warp}&e: &a{list}"
 invalid-visit-amount: "&cThe amount entered was either not numeric or simply invalid."
 visits-modified: "&aThe warp &e{warp} &ahas had its visit count modified by &e{amount} &aand now has a total of &e{total} visits."
+warp-use-cost: "&cThe warp &e{warp} &chas a usage price of &e${price} &cplease use the warps menu to use this warp."
